--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,8 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/phone_book?useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=root
+
+spring.jpa.show-sql=true
+
+spring.thymeleaf.cache=false
+
